--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.p">
     <title>Advanced Schema Generator</title>
 </head>
 <body>
@@ -113,19 +113,19 @@
                 <div class="service-area">
                     <div class="input-group">
                         <label>country</label>
-                        <input type="text" required name="service-area-country">
+                        <input type="text" name="service-area-country">
                     </div>
                     <div class="input-group">
                         <label>state</label>
-                        <input type="text" required name="service-area-state">
+                        <input type="text" name="service-area-state">
                     </div>
                     <div class="input-group">
                         <label>cityTown</label>
-                        <input type="text" required name="service-area-cityTown">
+                        <input type="text" name="service-area-cityTown">
                     </div>
                     <div class="input-group">
                         <label>url</label>
-                        <input type="text" required name="service-area-url">
+                        <input type="text" name="service-area-url">
                     </div>
                     <div class="input-group">
                         <label>zipCodes</label>
